[package]
name = "weiroll"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bitflags = "1"
ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = [
    "abigen",
] }
slotmap = "*"
thiserror = "*"
tracing = "*"

[dev-dependencies]
tokio = { version = "1.21", features = ["macros"] }
