[package]
name = "weiroll"
version = "0.1.1"
edition = "2021"
description = "Weiroll planner for EVM using ethers-rs"
repository = "https://github.com/georgewhewell/weiroll-rs"
license = "MIT OR Apache-2.0"
include = ["**/*.rs"]

[lib]

[dependencies]
bitflags = "2"
bytes = "1.4.0"
ethers = "2.0.3"
slotmap = "1.0.6"
thiserror = "1.0.40"
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.21", features = ["macros"] }
